remove getmessages, create wppClient
